--- a/English/about/values.html
+++ b/English/about/values.html
@@ -53,8 +53,8 @@
             </li>
             <li class="navbar"><a href="#">Medias</a>
                 <ul class="drop">
-                    <li><a href="#">Actualités</a></li>  
-                    <li><a href="#">Téléchargez nos brochures</a></li>
+                    <li><a href="../medias/actualité.php">Actualités</a></li>  
+                    <li><a href="../medias/télécharger_nos_brochures.html">Téléchargez nos brochures</a></li>
                      
                 </ul>
             </li>
@@ -123,8 +123,8 @@
     </div>
     <div class="barre-de-contact">
         <ul class="CB1">
-            <li><a href="Contact.php">contact</a></li>
-            <li><a href="about.html">à propos de nous</a></li>
+             <li><a href="../contact/Contact.php">contact</a></li>
+            <li><a href="../about/about.html">à propos de nous</a></li>
             <li>carrière</li>
         </ul>
         <ul class="CB2">
