--- a/about/about.html
+++ b/about/about.html
@@ -4,17 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ASW Afrique, à Propos: Présentation</title>
-    <link rel="shortcut icon" href="../assets/atalian-logo.png">
     <link rel="stylesheet" href="style/about.css">
     <link rel="stylesheet" href="../style/style.css">
-    <div class="header">
-        <h1><a href="../index.html" class="home">ASW</a></h1>
-        <a href="#"><img src="../assets/France.jpeg" style="width: 30px; height: 20px;" alt="French flag"></a>
-        <a href="../English/about/about.html"><img src="../assets/UK.png" style="width: 30px; height: 20px;" alt="UK flag"></a>
+    <link rel="shortcut icon" href="../assets/logos/logo Orange small.jpg">
+    <script src="language.js"></script>
+    <div class="header" style="background-color: rgb(221,123,16);">
+        <h1><a href="../index.html" class="home"><img src="../assets/logos/logo Orange small.jpg" style="height: 80px; width: 160px;" alt=""></a></h1>
+        <!-- <button id="language" onclick="changeLanguage('fr')"><img src="assets/France.jpeg" style="width: 30px; height: 20px; margin-right: 5px;" alt="French flag"></button>
+        <button id="language" onclick="changeLanguage('en')"><img src="assets/UK.png" style="width: 30px; height: 20px;" alt="UK flag"></button> -->
     </div>
-    <nav class="navbar">
+    <nav class="navbar" style="background-color: white; border-bottom: 1px solid black;">
         <ul class="navbar">
-            <li class="navbar"><a href="../index.html"><img src="assets/atalian-logo.png" style="height: 25px; width: 25px;" alt="logo atalian"></a></li>
+            <li class="navbar"><a href="../index.html"><img src="../assets/logos/logo Blanc small.jpg" style="height: 25px; width: 40px;" alt="logo atalian"></a></li>
             <li class="navbar"><a href="#">À propos</a>
                 <ul class="drop">
                     <li><a href="about.html">Présentation</a></li>
@@ -53,8 +54,8 @@
             </li>
             <li class="navbar"><a href="#">Medias</a>
                 <ul class="drop">
-                    <li><a href="#">Actualités</a></li>  
-                    <li><a href="#">Téléchargez nos brochures</a></li>
+                    <li><a href="../medias/actualité.php">Actualités</a></li>  
+                    <li><a href="../medias/télécharger_nos_brochures.html">Téléchargez nos brochures</a></li>
                      
                 </ul>
             </li>
@@ -205,8 +206,8 @@
     </div>
     <div class="barre-de-contact">
         <ul class="CB1">
-            <li><a href="Contact.php">contact</a></li>
-            <li><a href="about.html">à propos de nous</a></li>
+             <li><a href="../contact/Contact.php">contact</a></li>
+            <li><a href="../about/about.html">à propos de nous</a></li>
             <li>carrière</li>
         </ul>
         <ul class="CB2">
