--- a/services/maintenance.html
+++ b/services/maintenance.html
@@ -4,16 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ASW Afrique, Nos Offres: Maintenance Multitechnique</title>
-    <link rel="shortcut icon" href="../assets/atalian-logo.png">
     <link rel="stylesheet" href="../style/style.css">
     <link rel="stylesheet" href="style/maintenance.css">
-    <div class="header">
-        
-        <h1><a href="../index.html" class="home">ASW</a></h1>
+    <link rel="stylesheet" href="style/references.css">
+    <link rel="shortcut icon" href="../assets/logos/logo Orange small.jpg">
+    <div class="header" style="background-color: rgb(221,123,16);">
+        <h1><a href="../index.html" class="home"><img src="../assets/logos/logo Orange small.jpg" style="height: 80px; width: 160px;" alt=""></a></h1>
+        <!-- <button id="language" onclick="changeLanguage('fr')"><img src="assets/France.jpeg" style="width: 30px; height: 20px; margin-right: 5px;" alt="French flag"></button>
+        <button id="language" onclick="changeLanguage('en')"><img src="assets/UK.png" style="width: 30px; height: 20px;" alt="UK flag"></button> -->
     </div>
-    <nav class="navbar">
+    <nav class="navbar" style="background-color: white; border-bottom: 1px solid black;">
         <ul class="navbar">
-            <li class="navbar"><a href="../index.html"><img src="../assets/atalian-logo.png" style="height: 25px; width: 25px;" alt="logo atalian"></a></li>
+            <li class="navbar"><a href="../index.html"><img src="../assets/logos/logo Blanc small.jpg" style="height: 25px; width: 40px;" alt="logo atalian"></a></li>
             <li class="navbar"><a href="#">À propos</a>
          
                 <ul class="drop">
@@ -54,8 +56,8 @@
             </li>
             <li class="navbar"><a href="#">Medias</a>
                 <ul class="drop">
-                    <li><a href="#">Actualités</a></li>  
-                    <li><a href="#">Téléchargez nos brochures</a></li>
+                    <li><a href="../medias/actualité.php">Actualités</a></li>  
+                    <li><a href="../medias/télécharger_nos_brochures.html">Téléchargez nos brochures</a></li>
                 </ul>
             </li>
             <li class="navbar"><a href="../contact/Contact.php">Contact</a>
@@ -70,9 +72,10 @@
                 <h2 class="nos-ref">Nos références</h2>
                 <ul>
                     <li>
-                        <img src="assets/Maintenance Multitechnique/hôpital cheik khalifa.png" alt="Ibn Batouta Centre Commercial">
+                        <img style="width: 200px;" src="assets/Maintenance Multitechnique/hôpital cheik khalifa.png" alt="Ibn Batouta Centre Commercial">
                         <div class="hiden" style="display: none; transition: 0.5 ease-in-out;">
                             <p class="description">
+                                <strong style="border-bottom: 1px solid white;">Description:</strong> <br>
                                 La Fondation Cheikh Khalifa Ibn Zaid (FCKM)  est considérée comme le plus grand établissement Hospitalier privé, inauguré aujourd’hui au Maroc.
                                 <br>
                             </p>
@@ -81,19 +84,20 @@
                                 Superficie : 65 000 m².<br>
                                 Sites:
                                 <ul style="color: white;">
-                                    <li style="color: white;">L’hôpital Cheikh Khalifa Ibn Zaid Casablanca</li>
-                                    <li style="color: white;">L'université Mohammed VI des Sciences de la Santé</li>
-                                    <li style="color: white;">L'annexe de l'UM6SS</li>
-                                    <li style="color: white;">Les residences universitaires de Ziraoui</li>
+                                    <li style="color: white; font-size: 15px;">L’hôpital Cheikh Khalifa Ibn Zaid Casablanca</li>
+                                    <li style="color: white; font-size: 15px;">L'université Mohammed VI des Sciences de la Santé</li>
+                                    <li style="color: white; font-size: 15px;">L'annexe de l'UM6SS</li>
+                                    <li style="color: white; font-size: 15px;">Les residences universitaires de Ziraoui</li>
                                 </ul>
                                 Démarage: 2016.
                             </p>
                         </div>
                     </li>
                     <li>
-                        <img src="assets/Maintenance Multitechnique/Attijariwafa bank.png" alt="Tanger City Mall">
+                        <img style="width: 200px;" src="assets/Maintenance Multitechnique/Attijariwafa bank.png" alt="Tanger City Mall">
                         <div class="hiden" style="display: none;">
                             <p class="description">
+                                <strong style="border-bottom: 1px solid white;">Description:</strong> <br>
                                 Attijariwafa Bank est considérée comme la première banque au Maroc et au Maghreb et la 6eme en Afrique.
                                 <br>
                             </p>
@@ -105,7 +109,7 @@
                     </li>
                 </ul>
             </div>
-            <script src="../reference.js"></script>
+            <script src="../js/reference.js"></script>
             <div>
                 <h2>Prestation Multitechnique</h2>
                 <img class="title" src="assets/Maintenance Multitechnique/maintenance.jpg" alt="Maintenance Multitechnique">
@@ -166,8 +170,8 @@
     <img class="references" src="assets/Maintenance Multitechnique/hôpital cheik khalifa.png" alt="Attijariwafa Bank logo">
     <div class="barre-de-contact">
         <ul class="CB1">
-            <li><a href="Contact.php">contact</a></li>
-            <li><a href="about.html">à propos de nous</a></li>
+             <li><a href="../contact/Contact.php">contact</a></li>
+            <li><a href="../about/about.html">à propos de nous</a></li>
             <li>carrière</li>
         </ul>
         <ul class="CB2">
