--- a/services/proprete.html
+++ b/services/proprete.html
@@ -5,16 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ASW Afrique, Nos Offres: Propreté & Services Associés</title>
     <link rel="stylesheet" href="../style/style.css">
-    <link rel="shortcut icon" href="../assets/atalian-logo.png">
     <link rel="stylesheet" href="style/proprete.css">
     <link rel="stylesheet" href="style/references.css">
-    <div class="header">
-        
-    <h1><a href="../index.html" class="home">ASW</a></h1>
+    <link rel="shortcut icon" href="../assets/logos/logo Orange small.jpg">
+    <div class="header" style="background-color: rgb(221,123,16);">
+        <h1><a href="../index.html" class="home"><img src="../assets/logos/logo Orange small.jpg" style="height: 80px; width: 160px;" alt=""></a></h1>
+        <!-- <button id="language" onclick="changeLanguage('fr')"><img src="assets/France.jpeg" style="width: 30px; height: 20px; margin-right: 5px;" alt="French flag"></button>
+        <button id="language" onclick="changeLanguage('en')"><img src="assets/UK.png" style="width: 30px; height: 20px;" alt="UK flag"></button> -->
     </div>
-    <nav class="navbar">
+    <nav class="navbar" style="background-color: white; border-bottom: 1px solid black;">
         <ul class="navbar">
-            <li class="navbar"><a href="../index.html"><img src="../assets/atalian-logo.png" style="height: 25px; width: 25px;" alt="logo atalian"></a></li>
+            <li class="navbar"><a href="../index.html"><img src="../assets/logos/logo Blanc small.jpg" style="height: 25px; width: 40px;" alt="logo atalian"></a></li>
             <li class="navbar"><a href="#">À propos</a>
                 <ul class="drop">
                     <li><a href="../about/about.html">Présentation</a></li>
@@ -54,8 +55,8 @@
             </li>
             <li class="navbar"><a href="#">Medias</a>
                 <ul class="drop">
-                    <li><a href="#">Actualités</a></li>  
-                    <li><a href="#">Téléchargez nos brochures</a></li>
+                    <li><a href="../medias/actualité.php">Actualités</a></li>  
+                    <li><a href="../medias/télécharger_nos_brochures.html">Téléchargez nos brochures</a></li>
                      
                 </ul>
             </li>
@@ -73,6 +74,7 @@
                     <img src="assets/Propreté & services associé/Ibn Batouta centre commercial.png" alt="Ibn Batouta Centre Commercial">
                     <div class="hiden" style="display: none;">
                         <p class="description">
+                            <strong style="border-bottom: 1px solid white;">Description:</strong> <br>
                             Le mall Ibn Batouta, un projet de la société Mega Center, filiale du groupe Abdalass
                             – Facenor Immobilier. L’investissement engagé dans ce centre est de 420 millions de DH.
                             Ibn Batouta est situé en plein centre névralgique de la ville de Tanger
@@ -90,6 +92,7 @@
                     <img src="assets/Propreté & services associé/Tanger City Mall.png" alt="Tanger City Mall">
                     <div class="hiden" style="display: none;">
                         <p class="description">
+                            <strong style="border-bottom: 1px solid white;">Description:</strong> <br>
                             Tanger City Center est un projet incomparable qui offre un cadre de vie d´exception,
                             des appartements haut standing, le premier mall de la ville avec le premier cinéma
                             Megarama de Tanger, des Résidences Premium Hilton, deux hôtels 4 et 5 étoiles, et un
@@ -107,6 +110,7 @@
                     <img src="assets/Propreté & services associé/socco alto Centre Commercial.png" alt="Socco Alto Centre Commercial">
                     <div class="hiden" style="display: none;">
                         <p class="description">
+                            <strong style="border-bottom: 1px solid white;">Description:</strong> <br>
                             Fait parti des centres commerciaux de PETRA, S’étendant sur une superficie de 55 000 m²,
                             dont 31 000 m2 de surface commerciale répartie sur trois niveaux Le centre comprend un
                             espace de restauration d’une quinzaine de restaurants et cafés et une offre de loisirs
@@ -125,6 +129,7 @@
                     <img src="assets/Facility Management/logo/Logo_Royal_Air_Maroc.png" alt="Royal Air Maroc">
                     <div class="hiden" style="display: none;">
                         <p class="description">
+                            <strong style="border-bottom: 1px solid white;">Description:</strong> <br>
                             Royal Air Maroc est le transporteur national du Royaume du Maroc. Le siège de la compagnie est basé à Casablanca.
                             <br>
                         </p>
@@ -136,7 +141,7 @@
                 </li>
             </ul>
         </div>
-        <script src="../reference.js"></script>
+        <script src="../js/reference.js"></script>
         <div class="speech">
             <h2>l'expert propreté & services associés</h2>
             <img class="title" src="assets/Propreté & services associé/cleaning stairs.jpg" alt="cleaning stairs">
@@ -372,8 +377,8 @@
     </div>
     <div class="barre-de-contact">
         <ul class="CB1">
-            <li><a href="Contact.php">contact</a></li>
-            <li><a href="about.html">à propos de nous</a></li>
+             <li><a href="../contact/Contact.php">contact</a></li>
+            <li><a href="../about/about.html">à propos de nous</a></li>
             <li>carrière</li>
         </ul>
         <ul class="CB2">
