--- a/index.html
+++ b/index.html
@@ -6,15 +6,16 @@
     <title>ASW Afrique</title>
     <link rel="stylesheet" href="style/style.css">
     <link rel="stylesheet" href="style/home.css">
-    <link rel="shortcut icon" href="assets/atalian-logo.png">
-    <div class="header">
-        <h1><a href="index.html" class="home">ASW</a></h1>
-        <a href="#"><img src="assets/France.jpeg" style="width: 30px; height: 20px; margin-right: 5px;" alt="French flag"></a>
-        <a href="English/#"><img src="assets/UK.png" style="width: 30px; height: 20px;" alt="UK flag"></a>
+    <link rel="shortcut icon" href="assets/logos/logo Orange small.jpg">
+    <script src="language.js"></script>
+    <div class="header" style="background-color: rgb(221,123,16);">
+        <h1><a href="index.html" class="home"><img src="assets/logos/logo Orange small.jpg" style="height: 80px; width: 160px;" alt=""></a></h1>
+        <!-- <button id="language" onclick="changeLanguage('fr')"><img src="assets/France.jpeg" style="width: 30px; height: 20px; margin-right: 5px;" alt="French flag"></button>
+        <button id="language" onclick="changeLanguage('en')"><img src="assets/UK.png" style="width: 30px; height: 20px;" alt="UK flag"></button> -->
     </div>
-    <nav class="navbar">
+    <nav class="navbar" style="background-color: white; border-bottom: 1px solid black;">
         <ul class="navbar">
-            <li class="navbar"><a href="index.html"><img src="assets/atalian-logo.png" style="height: 25px; width: 25px;" alt="logo atalian"></a></li>
+            <li class="navbar"><a href="index.html"><img src="assets/logos/logo Blanc small.jpg" style="height: 25px; width: 40px;" alt="logo atalian"></a></li>
             <li class="navbar"><a href="#">À propos</a>
                 <ul class="drop">
                     <li><a href="about/about.html">Présentation</a></li>
@@ -53,8 +54,8 @@
             </li>
             <li class="navbar"><a href="#">Medias</a>
                 <ul class="drop">
-                    <li><a href="#">Actualités</a></li>  
-                    <li><a href="#">Téléchargez nos brochures</a></li>
+                    <li><a href="medias/actualité.php">Actualités</a></li>  
+                    <li><a href="medias/télécharger_nos_brochures.html">Téléchargez nos brochures</a></li>
                      
                 </ul>
             </li>
@@ -64,64 +65,63 @@
     </nav>
 </head>
 <body>
-    <h2 class="title">Nos Métiers Facilitent le Vôtre</h2>
-    <img class="FP" src="assets/front page/building sunrise.jpg" alt="sunrise throught buildings">
-    <h1 class="title">Présentation</h1>
-    <p class="présentation">
-        A Simple Way, Groupe Africain du Facility Management, se caractérise par L’expérience,
-        la compétence, le professionnalisme, la rigueur, le sérieux et la réactivité de son
-        personnel; ce qui lui permet de perdurer et de conserver une clientèle fidèle. <br><br>
-        A Simple Way propose des prestations conformes aux exigences en intervenant dans les
-        secteurs d’activités et les environnements les plus divers. <br>
-        Aujourd’hui, ASW Maroc, dirigée par une équipe très expérimentée, vise à élargir le
-        parc client au Maroc en proposant une offre globale de valeur et des solutions adaptées
-        accompagnant les entreprises et les organisations  dans l’externalisation des services.
-    </p>
-    <h1 class="title">Nos Offres</h1>
-    <div class="nos-offres">
-        <div class="separating-line"></div>
-        <div class="FM">
-            <a href="services/facility-management.html">
-                <img src="assets/FM.png" alt="facility-management">
-                <div>Facility Management</div>
-            </a>
+    <div id="fr" style="display: block;">
+        <h2 class="title">Nos Métiers Facilitent le Vôtre</h2>
+        <img class="FP" src="assets/front page/building sunrise.jpg" alt="sunrise throught buildings">
+        <h1 class="title">Présentation</h1>
+        <p class="présentation">
+            A Simple Way, Groupe Africain du Facility Management, se caractérise par L’expérience,
+            la compétence, le professionnalisme, la rigueur, le sérieux et la réactivité de son
+            personnel; ce qui lui permet de perdurer et de conserver une clientèle fidèle. <br><br>
+            A Simple Way propose des prestations conformes aux exigences en intervenant dans les
+            secteurs d’activités et les environnements les plus divers. <br>
+            Aujourd’hui, ASW Maroc, dirigée par une équipe très expérimentée, vise à élargir le
+            parc client au Maroc en proposant une offre globale de valeur et des solutions adaptées
+            accompagnant les entreprises et les organisations  dans l’externalisation des services.
+        </p>
+        <h1 class="title">Nos Offres</h1>
+        <div class="nos-offres">
+            <div class="separating-line"></div>
+            <div class="FM">
+                <a href="services/facility-management.html">
+                    <img src="assets/FM.png" alt="facility-management">
+                    <div>Facility Management</div>
+                </a>
+            </div>
+            <ul class="nos-offres">
+                <li>
+                    <a href="services/proprete.html"><img src="services/assets/offres/goutte.png" alt="proprete">
+                    <span>Propreté & Services Associés</span></a>
+                </li>
+                <li>
+                    <a href="services/maintenance.html"><img src="services/assets/offres/rouage.png" alt="maintenance">
+                    <span>Maintenance Multitechnique</span></a>
+                </li>
+                <li>
+                    <a href="services/securite.html"><img src="services/assets/offres/shield.png" alt="securite">
+                    <span>Sécurité & Sureté</span></a>
+                </li>
+                <li>
+                    <a href="services/acceuil.html"><img src="services/assets/offres/récéption.png" alt="accueil">
+                    <span>Accueil</span></a>
+                </li>
+                <li>
+                    <a href="services/interim.html"><img src="assets/front page/interim-removebg-preview.png" alt="interim"></a>
+                    <span>Interim & Recrutement</span>
+                </li>
+            </ul>
         </div>
-        <ul class="nos-offres">
-            <li>
-                <a href="services/proprete.html"><img src="services/assets/offres/goutte.png" alt="proprete">
-                <span>Propreté & Services Associés</span></a>
-            </li>
-            <li>
-                <a href="services/maintenance.html"><img src="services/assets/offres/rouage.png" alt="maintenance">
-                <span>Maintenance Multitechnique</span></a>
-            </li>
-            <li>
-                <a href="services/securite.html"><img src="services/assets/offres/shield.png" alt="securite">
-                <span>Sécurité & Sureté</span></a>
-            </li>
-            <li>
-                <a href="services/acceuil.html"><img src="services/assets/offres/récéption.png" alt="accueil">
-                <span>Accueil</span></a>
-            </li>
-            <li>
-                <a href="services/space"><img src="services/assets/offres/SpaceManagement.png" alt="interim">
-                <span>Space Management</span></a>
-            </li>
-            <li>
-                <img src="services/assets/offres/assist aero.png" alt="assistance aéroportuaire">
-                <span>Assistance Aéroportuaire</span>
-            </li>
-            <li>
-                <img src="assets/front page/human logo.jpg" alt="interim">
-                <span>Interim & Recrutement</span>
-            </li>
-        </ul>
+        <div id="en" style="display: none;">
+            <h2 class="title">Our job is to facilitate yours</h2>
+            <img class="FP" src="assets/front page/building sunrise.jpg" alt="sunrise throught buildings">
+            <h1 class="title">Presentation</h1>
+        </div>
         <div class="separating-line"></div>
     </div>
     <div class="barre-de-contact">
         <ul class="CB1">
-            <li><a href="Contact.php">contact</a></li>
-            <li><a href="about.html">à propos de nous</a></li>
+            <li><a href="contact/Contact.php">contact</a></li>
+            <li><a href="about/about.html">à propos de nous</a></li>
             <li>carrière</li>
         </ul>
         <ul class="CB2">
