--- a/services/facility-management.html
+++ b/services/facility-management.html
@@ -4,15 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ASW Afrique, Nos Offres: Facility Management</title>
-    <link rel="shortcut icon" href="../assets/atalian-logo.png">
     <link rel="stylesheet" href="../style/style.css">
     <link rel="stylesheet" href="style/facility-management.css">
-    <div class="header">
-        <h1><a href="../index.html" class="home">ASW</a></h1>
+    <link rel="shortcut icon" href="../assets/logos/logo Orange small.jpg">
+    <div class="header" style="background-color: rgb(221,123,16);">
+        <h1><a href="../index.html" class="home"><img src="../assets/logos/logo Orange small.jpg" style="height: 80px; width: 160px;" alt=""></a></h1>
+        <!-- <button id="language" onclick="changeLanguage('fr')"><img src="assets/France.jpeg" style="width: 30px; height: 20px; margin-right: 5px;" alt="French flag"></button>
+        <button id="language" onclick="changeLanguage('en')"><img src="assets/UK.png" style="width: 30px; height: 20px;" alt="UK flag"></button> -->
     </div>
-    <nav class="navbar">
+    <nav class="navbar" style="background-color: white; border-bottom: 1px solid black;">
         <ul class="navbar">
-            <li class="navbar"><a href="../index.html"><img src="../assets/atalian-logo.png" style="height: 25px; width: 25px;" alt="logo atalian"></a></li>
+            <li class="navbar"><a href="../index.html"><img src="../assets/logos/logo Blanc small.jpg" style="height: 25px; width: 40px;" alt="logo atalian"></a></li>
             <li class="navbar"><a href="#">À propos</a>
                 <ul class="drop">
                     <li><a href="../about/about.html">Présentation</a></li>
@@ -51,8 +53,8 @@
             </li>
             <li class="navbar"><a href="#">Medias</a>
                 <ul class="drop">
-                    <li><a href="#">Actualités</a></li>  
-                    <li><a href="#">Téléchargez nos brochures</a></li>
+                    <li><a href="../medias/actualité.php">Actualités</a></li>  
+                    <li><a href="../medias/télécharger_nos_brochures.html">Téléchargez nos brochures</a></li>
                      
                 </ul>
             </li>
@@ -163,18 +165,18 @@
     </div>
     <h2>Réferences clients</h2>
     <div class="reference">
-        <a href="https://www.royalairmaroc.com/ma-fr"><img src="assets/Facility Management/logo/Logo_Royal_Air_Maroc.png" alt=""></a>
-        <a href="https://aml.ma/fr/"><img src="assets/Facility Management/logo/Africa_morocco_link_logo.png" alt=""></a>
-        <a href="https://www.apmterminals.com/"><img src="assets/Facility Management/logo/apm-terminals-logo.png" alt=""></a>
-        <a href="https://www.decathlon.ma/"><img src="assets/Facility Management/logo/Decathlon-logo.png" alt=""></a>
-        <a href="https://www.dachser.ma/fr/"><img src="assets/Facility Management/logo/Logo Dascher.png" alt=""></a>
-        <a href="https://www.stellantis.com/fr"><img src="assets/Facility Management/logo/Logo-groupe-PSA.jpg" alt=""></a>
+        <a target="_blank" href="https://www.royalairmaroc.com/ma-fr"><img src="assets/Facility Management/logo/Logo_Royal_Air_Maroc.png" alt=""></a>
+        <a target="_blank" href="https://aml.ma/fr/"><img src="assets/Facility Management/logo/Africa_morocco_link_logo.png" alt=""></a>
+        <a target="_blank" href="https://www.apmterminals.com/"><img src="assets/Facility Management/logo/apm-terminals-logo.png" alt=""></a>
+        <a target="_blank" href="https://www.decathlon.ma/"><img src="assets/Facility Management/logo/Decathlon-logo.png" alt=""></a>
+        <a target="_blank" href="https://www.dachser.ma/fr/"><img src="assets/Facility Management/logo/Logo Dascher.png" alt=""></a>
+        <a target="_blank" href="https://www.stellantis.com/fr"><img src="assets/Facility Management/logo/Logo-groupe-PSA.jpg" alt=""></a>
     </div>
 </body>
 <div class="barre-de-contact">
     <ul class="CB1">
-        <li><a href="Contact.php">contact</a></li>
-        <li><a href="about.html">à propos de nous</a></li>
+         <li><a href="../contact/Contact.php">contact</a></li>
+        <li><a href="../about/about.html">à propos de nous</a></li>
         <li>carrière</li>
     </ul>
     <ul class="CB2">
