--- a/services/interim.html
+++ b/services/interim.html
@@ -4,16 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ASW Afrique, Nos Offres: Interim & Recrutement</title>
-    <link rel="shortcut icon" href="../assets/atalian-logo.png">
     <link rel="stylesheet" href="../style/style.css">
     <link rel="stylesheet" href="style/interim.css">
     <link rel="stylesheet" href="style/references.css">
-    <div class="header">
-        <h1><a href="../index.html" class="home">ASW</a></h1>
+    <link rel="shortcut icon" href="../assets/logos/logo Orange small.jpg">
+    <div class="header" style="background-color: rgb(221,123,16);">
+        <h1><a href="../index.html" class="home"><img src="../assets/logos/logo Orange small.jpg" style="height: 80px; width: 160px;" alt=""></a></h1>
+        <!-- <button id="language" onclick="changeLanguage('fr')"><img src="assets/France.jpeg" style="width: 30px; height: 20px; margin-right: 5px;" alt="French flag"></button>
+        <button id="language" onclick="changeLanguage('en')"><img src="assets/UK.png" style="width: 30px; height: 20px;" alt="UK flag"></button> -->
     </div>
-    <nav class="navbar">
+    <nav class="navbar" style="background-color: white; border-bottom: 1px solid black;">
         <ul class="navbar">
-            <li class="navbar"><a href="../index.html"><img src="../assets/atalian-logo.png" style="height: 25px; width: 25px;" alt="logo atalian"></a></li>
+            <li class="navbar"><a href="../index.html"><img src="../assets/logos/logo Blanc small.jpg" style="height: 25px; width: 40px;" alt="logo atalian"></a></li>
             <li class="navbar"><a href="#">À propos</a>
                 <ul class="drop">
                     <li><a href="../about/about.html">Présentation</a></li>
@@ -53,8 +55,8 @@
             </li>
             <li class="navbar"><a href="#">Medias</a>
                 <ul class="drop">
-                    <li><a href="#">Actualités</a></li>  
-                    <li><a href="#">Téléchargez nos brochures</a></li>
+                    <li><a href="../medias/actualité.php">Actualités</a></li>  
+                    <li><a href="../medias/télécharger_nos_brochures.html">Téléchargez nos brochures</a></li>
                      
                 </ul>
             </li>
@@ -73,6 +75,7 @@
                     <img style="width: 200px;" src="assets/Interim & Recrutement/servair.png" alt="Ibn Batouta Centre Commercial">
                     <div class="hiden" style="display: none; opacity: 0;">
                         <p class="description">
+                            <strong style="border-bottom: 1px solid white;">Description:</strong> <br>
                             Servair est un  leader de son activité dans l’agro-alimentaire,
                             fournitures des plateaux repas pour le secteur aéronautiques. 
                             <br>
@@ -88,6 +91,7 @@
                     <img style="width: 200px;" src="assets/Interim & Recrutement/APM Terminals.png" alt="Tanger City Mall">
                     <div class="hiden" style="display: none; opacity: 0;">
                         <p class="description">
+                            <strong style="border-bottom: 1px solid white;">Description:</strong> <br>
                             APM Terminals Tangier est l’un des principaux opérateurs de terminaux
                             au Maroc, C’est le troisième port à conteneurs le plus fréquenté d’Afrique.
                             <br>
@@ -105,7 +109,7 @@
                 </li>
             </ul>
         </div>
-        <script src="../reference.js"></script>
+        <script src="../js/reference.js"></script>
         <div>
             <h2 class="presta">Nos prestations</h2>
             <img class="main" src="assets/Interim & Recrutement/interim.jpg" alt="">
@@ -145,8 +149,8 @@
     </div>
     <div class="barre-de-contact">
         <ul class="CB1">
-            <li><a href="Contact.php">contact</a></li>
-            <li><a href="about.html">à propos de nous</a></li>
+             <li><a href="../contact/Contact.php">contact</a></li>
+            <li><a href="../about/about.html">à propos de nous</a></li>
             <li>carrière</li>
         </ul>
         <ul class="CB2">
