--- a/services/securite.html
+++ b/services/securite.html
@@ -5,15 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ASW Afrique, Nos Offres: Sécurité & Sûreté</title>
     <link rel="stylesheet" href="../style/style.css">
-    <link rel="shortcut icon" href="../assets/atalian-logo.png">
     <link rel="stylesheet" href="style/securité.css">
     <link rel="stylesheet" href="style/references.css">
-    <div class="header">
-        <h1><a href="../index.html" class="home">ASW</a></h1>
+    <link rel="shortcut icon" href="../assets/logos/logo Orange small.jpg">
+    <div class="header" style="background-color: rgb(221,123,16);">
+        <h1><a href="../index.html" class="home"><img src="../assets/logos/logo Orange small.jpg" style="height: 80px; width: 160px;" alt=""></a></h1>
+        <!-- <button id="language" onclick="changeLanguage('fr')"><img src="assets/France.jpeg" style="width: 30px; height: 20px; margin-right: 5px;" alt="French flag"></button>
+        <button id="language" onclick="changeLanguage('en')"><img src="assets/UK.png" style="width: 30px; height: 20px;" alt="UK flag"></button> -->
     </div>
-    <nav class="navbar">
+    <nav class="navbar" style="background-color: white; border-bottom: 1px solid black;">
         <ul class="navbar">
-            <li class="navbar"><a href="../index.html"><img src="../assets/atalian-logo.png" style="height: 25px; width: 25px;" alt="logo atalian"></a></li>
+            <li class="navbar"><a href="../index.html"><img src="../assets/logos/logo Blanc small.jpg" style="height: 25px; width: 40px;" alt="logo atalian"></a></li>
             <li class="navbar"><a href="#">À propos</a>
          
                 <ul class="drop">
@@ -54,8 +56,8 @@
             </li>
             <li class="navbar"><a href="#">Medias</a>
                 <ul class="drop">
-                    <li><a href="#">Actualités</a></li>  
-                    <li><a href="#">Téléchargez nos brochures</a></li>
+                    <li><a href="../medias/actualité.php">Actualités</a></li>  
+                    <li><a href="../medias/télécharger_nos_brochures.html">Téléchargez nos brochures</a></li>
                      
                 </ul>
             </li>
@@ -74,6 +76,7 @@
                     <img src="assets/Sécurité & Sureté/Tanger Med Port Authority.png" alt="Ibn Batouta Centre Commercial">
                     <div class="hiden" style="display: none; opacity: 0;">
                         <p class="description">
+                            <strong style="border-bottom: 1px solid white;">Description:</strong> <br>
                             Le complexe portuaire et le pôle industriel Tanger Med est une passerelle de
                             transbordement mondiale avec  plus de 9 millions de TEU de conteneurs, 7 millions
                             de passagers, 700 000 camions et 1 million de véhicules. 
@@ -90,6 +93,7 @@
                     <img src="assets/Sécurité & Sureté/Délégation Européenne au Royaume du Maroc.png" alt="Tanger City Mall">
                     <div class="hiden" style="display: none; opacity: 0;">
                         <p class="description">
+                            <strong style="border-bottom: 1px solid white;">Description:</strong> <br>
                             La Délégation de l'Union européenne au Maroc, l'une des 139 Délégations
                             de l'UE à travers le monde, représente l'ensemble des Institutions européennes
                             et travaille sous l'autorité du Haut Représentant de l'Union européenne pour
@@ -106,7 +110,7 @@
                 </li>
             </ul>
         </div>
-        <script src="../reference.js"></script>
+        <script src="../js/reference.js"></script>
         <div>
             <h2 class="title">Savoir-faire Classique & innovation technologique</h2>
             <img class="main" src="assets/Sécurité & Sureté/sécurité.jpg" alt="talkie-walkie securité">
@@ -196,8 +200,8 @@
     </div>
     <div class="barre-de-contact">
         <ul class="CB1">
-            <li><a href="Contact.php">contact</a></li>
-            <li><a href="about.html">à propos de nous</a></li>
+             <li><a href="../contact/Contact.php">contact</a></li>
+            <li><a href="../about/about.html">à propos de nous</a></li>
             <li>carrière</li>
         </ul>
         <ul class="CB2">
