Update assets and content for ASW

--- a/English/services/offre.html
+++ b/English/services/offre.html
@@ -67,7 +67,7 @@
         <h2>Une offre de services intégrée et sur mesure</h2>
         <p class="paragraph">
             <img src="assets/offres/woman.png" alt="woman folding a towel">
-            ATALIAN propose des solutions personnalisées, depuis la prise en
+            ASW propose des solutions personnalisées, depuis la prise en
             charge d’un ou plusieurs services spécifiques, jusqu’au pilotage
             de l’ensemble des services généraux. <br>
             <br>
@@ -85,12 +85,12 @@
         <h2>Des solutions sur mesure</h2>
         <p class="paragraph">
             Avec sa large palette de savoir-faire métier et d’expertises sectorielles,
-            ATALIAN peut prendre en charge tout ou partie des services que vous souhaitez
+            ASW peut prendre en charge tout ou partie des services que vous souhaitez
             externaliser. Ses équipes peuvent délivrer des prestations mono-services,
             multiservices ou full-service (FM intégré) en fonction de vos besoins, de
             votre organisation et de vos budgets. <br>
             <br>
-            ATALIAN effectue en propre plus de 85 % des prestations qui lui sont confiées
+            ASW effectue en propre plus de 85 % des prestations qui lui sont confiées
             et pilote les autres prestations en déléguant leur exécution à des partenaires
             de confiance sélectionnés pour leur qualité de service irréprochable.
             <img src="assets/offres/building.png" alt="building windows wash">
