--- a/English/services/proprete.html
+++ b/English/services/proprete.html
@@ -68,7 +68,7 @@
     <h2>l'expert propreté & services associés</h2>
     <div class="expert">
         <p>
-            Le Groupe ATALIAN conjugue les savoir-faire
+            Le Groupe ASW conjugue les savoir-faire
             et les expertises d’un leader marocain et
             mondial de la propreté et du multi-services. </p>
         <p>
@@ -77,7 +77,7 @@
             tels que gares et aéroports, hôtels, établissements de
             santé, le Groupe propose une gamme complète de services
             de nettoyage professionnel adaptés aux besoins et exigences
-            de chaque client. ATALIAN propose également une gamme de
+            de chaque client. ASW propose également une gamme de
             services complémentaires à destination des occupants.</p>
         <p>
             Découvrez ci-dessous notre offre, nos engagements,
