--- a/about/values.html
+++ b/about/values.html
@@ -87,7 +87,7 @@
                 <div class="initiative">
                     <h3>Bien être des collaborateurs</h3>
                     <p>
-                        Nous veillons à ce que notre richesse humaine évolue et s’épanouisse d’un point de vue professionnel pour apporter à ATALIAN et ainsi nos clients valeur ajoutée basée intelligence collective
+                        Nous veillons à ce que notre richesse humaine évolue et s’épanouisse d’un point de vue professionnel pour apporter à ASW et ainsi nos clients une valeur ajoutée basée sur l'intelligence collective
                     </p>
                 </div>
             </li>
