--- a/services/acceuil.html
+++ b/services/acceuil.html
@@ -76,7 +76,7 @@
     <h2>City One, leader de l'accueil</h2>
     <p>
         City One, entreprise spécialisée dans les prestations d’accueil et événementiel,
-        est le partenaire d’ATALIAN.
+        est le partenaire d’ASW.
         <br><br>
         Depuis plus de 20 ans, le Groupe City One a su gagner la confiance de grands groupes
         grâce à son approche innovante en matière de gestion et d’organisation de l’accueil.
