--- a/services/offre.html
+++ b/services/offre.html
@@ -184,7 +184,7 @@
         </ul>
         <p>
             Le respect de ces engagements, la motivation de nos équipes et la fiabilité de
-            notre stratégie renforcent la position d'ATALIAN parmi les leaders de son marché.
+            notre stratégie renforcent la position d'ASW parmi les leaders de son marché.
             <br><br>
             Cet objectif d’excellence est décliné dans le projet d’entreprise et dans ses
             valeurs. Il est partagé à tous les niveaux et par chaque collaborateur qui connaît
