--- a/services/proprete.html
+++ b/services/proprete.html
@@ -208,7 +208,7 @@
     </div>
     <h2>Pourquoi choisir A Simple Way ?</h2>
     <div class="wrapper" id="innovation">
-        <img class="why" src="assets/Propreté & services associé/cleaning anti-covid.jpg" alt="">
+        <img class="why" src="assets/Propreté & services associé/FDM.png" alt="">
         <div>
             <p class="why">
                 Solution innovante de protection de surface, attirant 
@@ -282,7 +282,7 @@
                     <li>Maintenir votre patrimoine immobilier en bon état</li>
                 </ul>
             </div>
-            <img src="assets/Propreté & services associé/nettoyage accueuil.jpg" alt="walking in a building">
+            <img src="assets/Propreté & services associé/FDM.png" alt="walking in a building">
         </div>
         <div class="wrapper">
             <img src="assets/Propreté & services associé/talking on a sofa.jpg" alt="chating on a sofa">
