--- a/about/engagement.html
+++ b/about/engagement.html
@@ -8,15 +8,14 @@
     <link rel="stylesheet" href="../style/style.css">
     <link rel="stylesheet" href="style/engagement.css">
     <link rel="shortcut icon" href="../assets/logos/ASW BF.png">
-    <script src="language.js"></script>
     <div class="header" style="background-color: rgb(240,124,16);">
-        <h1><a href="index.html" class="home"><img src="../assets/logos/ASW Bl F.png" style="height: 80px; width: 160px;" alt=""></a></h1>
+        <h1><a href="../index.html" class="home"><img src="../assets/logos/ASW Bl F.png" style="height: 80px; width: 160px;" alt=""></a></h1>
         <!-- <button id="language" onclick="changeLanguage('fr')"><img src="assets/France.jpeg" style="width: 30px; height: 20px; margin-right: 5px;" alt="French flag"></button>
         <button id="language" onclick="changeLanguage('en')"><img src="assets/UK.png" style="width: 30px; height: 20px;" alt="UK flag"></button> -->
     </div>
     <nav class="navbar" style="background-color: white; border-bottom: 1px solid black;">
         <ul class="navbar">
-            <li class="navbar"><a href="index.html"><img src="../assets/logos/ASW BF.png" style="height: 30px; width: 50px;" alt="logo atalian"></a></li>
+            <li class="navbar"><a href="../index.html"><img src="../assets/logos/ASW BF.png" style="height: 30px; width: 50px;" alt="logo atalian"></a></li>
              <li class="navbar"><a href="#">À propos</a>
                 <ul class="drop">
                     <li><a href="about.html">Présentation</a></li>
