Add image for "Eau structurée" in expertise.html

--- a/about/expertise.html
+++ b/about/expertise.html
@@ -138,7 +138,7 @@
             <img src="assets/pages/expertise/O3.jpg" alt="">
         </li>
         <li>Eau structurée <br>
-            <img src="assets/pages/expertise/" alt="">
+            <img src="assets/pages/expertise/eau structurée.jpg" alt="">
         </li>
     </ul>
     <style>
