Update collaborator skills in proprete.html

--- a/services/proprete.html
+++ b/services/proprete.html
@@ -302,7 +302,7 @@
                     <li>Utilisation de produits respectueux de l’environnement (Ecolabel, Ecocert)</li>
                     <li>Mise en œuvre de techniques peu consommatrices d’eau ou d’énergie (nettoyage à l’eau, machines avec système de dilution automatique, microfibres)</li>
                     <li>Équipement de nos agents avec du matériel ergonomique et sécurisé (chariots motorisés, leviers pour containers poubelle, balais à boule, sac à dos produits…)</li>
-                    <li>Développement des compétences de nos collaborateurs (Talent Review, Atalian Academy)</li>
+                    <li>Développement des compétences de nos collaborateurs (Talent Review)</li>
                     <li>Médaille Ecovadis Platinum (top 1% des entreprises du secteur en RSE)</li>
                 </ul>
             </div>
