Fix image file extension in innovation.html

--- a/about/innovation.html
+++ b/about/innovation.html
@@ -81,7 +81,7 @@
     </p>
     <div class="ecosystem-atalian">
         <h2>l'écosystème innovation ASW</h2>
-        <img src="assets/pages/innovation/ecosystem." alt="atalian's ecosytem">
+        <img src="assets/pages/innovation/ecosystem.png" alt="atalian's ecosytem">
     </div>
     <div class="retour-sur-nos-succes">
         <h2>retour sur nos succés</h2>
