Added links to "Candidature spontanée" page in multiple HTML files

--- a/carriere/Politique-RH.html
+++ b/carriere/Politique-RH.html
@@ -47,7 +47,8 @@
                 <ul class="drop">
                     <li><a href="Politique-RH.html">Politique Ressources Humaines</a></li>
                     <li><a href="Politique-emploi.html">Notre Politique d'Emploi</a></li>
-                    <li><a href="../carriere/Offres-emploi.php">Nos offres d'emploi</a></li>
+                    <li><a href="Offres-emploi.php">Nos offres d'emploi</a></li>
+                    <li><a href="Candidature-spontanée.php">Candidature spontanée</a></li>
                 </ul>
             </li>
             <li class="navbar"><a href="#">Medias</a>
