Update presentation text in index.html

--- a/index.html
+++ b/index.html
@@ -70,14 +70,31 @@
         <img class="FP" src="assets/front page/building sunrise.jpg" alt="sunrise throught buildings">
         <h1 class="title">Présentation</h1>
         <p class="présentation">
-            A Simple Way, Groupe Africain du Facility Management, se caractérise par L’expérience,
-            la compétence, le professionnalisme, la rigueur, le sérieux et la réactivité de son
-            personnel; ce qui lui permet de perdurer et de conserver une clientèle fidèle. <br><br>
-            A Simple Way propose des prestations conformes aux exigences en intervenant dans les
-            secteurs d’activités et les environnements les plus divers. <br>
-            Aujourd’hui, ASW Maroc, dirigée par une équipe très expérimentée, vise à élargir le
-            parc client au Maroc en proposant une offre globale de valeur et des solutions adaptées
-            accompagnant les entreprises et les organisations  dans l’externalisation des services.
+            A Simple Way est l’un des leaders Africain du Facility Management.
+            Implanté dans 4 pays, ASW accompagne les entreprises et les organisations dans
+            l’externalisation des services aux bâtiments et aux occupants en apportant des solutions
+            personnalisées créatrices de valeur.
+            <br><br>
+            A Simple Way intervient dans les secteurs d’activités et les environnements les plus divers
+            avec une offre globale et intégrée de prestations conformes aux exigences les plus élevées
+            A Simple Way se distingue en tant que précurseur de renom dans le domaine du Facility Management
+            en Afrique :
+            <br>
+            Étendant son influence sur quatre nations, ASW se positionne comme le partenaire privilégié des
+            entreprises et organisations, les guidant avec une expertise inégalée dans l'externalisation des
+            services liés aux bâtiments et aux occupants. Notre engagement se traduit par la proposition de
+            solutions sur mesure, méticuleusement conçues pour générer une valeur ajoutée exceptionnelle.
+            <br><br>
+            Opérant dans une variété de secteurs d'activités et d'environnements, A Simple Way offre une
+            palette complète et intégrée de prestations. Chacune de nos interventions répond aux normes les
+            plus strictes, démontrant notre engagement envers l'excellence et notre capacité à surpasser les
+            attentes.
+            <br>
+            <B>EN CHOISISSANT A SIMPLE WAY, VOUS OPTEZ POUR BIEN PLUS QU'UN SERVICE DE FACILITY MANAGEMENT
+            , VOUS CHOISISSEZ UN PARTENAIRE STRATEGIQUE QUI TRANSFORMERA VOTRE APPROCHE OPERATIONNELLE AVEC INNOVATION
+            ET EFFICACITE</B>.
+
+
         </p>
         <h1 class="title">Nos Offres</h1>
         <div class="nos-offres">
