Refactor about.html to improve readability and add additional content

--- a/about/about.html
+++ b/about/about.html
@@ -139,14 +139,31 @@
     <div class="title4">
         <h2>des solutions personnalisées</h2>
         <p class="about">
-            Avec sa large palette de savoir-faire métier et d’expertises
-            sectorielles, ASW peut prendre en charge tout ou partie
-            des services que vous souhaitez externaliser. Ses équipes peuvent
-            délivrer des prestations mono-services, multiservices ou full-service
-            (FM intégré) en fonction de vos besoins, de votre organisation et de vos budgets. <br><br>
-            ASW effectue en propre plus de 85 % des prestations qui lui sont confiées
-            et pilote les autres prestations en déléguant leur exécution à des partenaires
-            de confiance sélectionnés pour leur qualité de service irréprochable. <br>
+            Avec sa large palette de savoir-faire métier et d’expertises sectorielles,
+            ASW peut prendre en charge tout ou partie des services que vous souhaitez
+            externaliser. Ses équipes peuvent délivrer des prestations mono-services,
+            multiservices ou full-service (FM intégré) en fonction de vos besoins, de
+            votre organisation et de vos budgets.
+            <br><br>
+            ASW effectue en propre plus de 85 % des prestations qui lui sont confiées et
+            pilote les autres prestations en déléguant leur exécution à des partenaires de
+            confiance sélectionnés pour leur qualité de service irréprochable.
+            <br><br>
+            Fort de son éventail étendu de compétences métier et d'expertises sectorielles,
+            A Simple Way se positionne comme le partenaire idéal pour la gestion de l'externalisation
+            de vos services. Que vous envisagiez de déléguer l'intégralité ou une partie spécifique de
+            vos besoins, nos équipes compétentes sont prêtes à fournir des prestations sur mesure, adaptées
+            à votre organisation, vos exigences et vos contraintes budgétaires.
+            <br><br>
+            Avec une maîtrise directe de plus de 85 % des services que nous entreprenons,
+            ASW garantit une qualité exceptionnelle et une performance sans compromis. Nous
+            orchestrons également les prestations externes en confiant leur exécution à des
+            partenaires triés sur le volet, reconnus pour leur engagement envers un service
+            d'une qualité inégalée. Opter pour A Simple Way, c'est s'assurer non seulement
+            d'une externalisation efficace, mais aussi d'une excellence opérationnelle et
+            d'une gestion optimisée de vos ressources.
+
+
             <img src="assets/travail.png" alt="travail bureau">
         </p>
     </div>
@@ -156,16 +173,21 @@
             <li class="halim">
                 <img src="../assets/front page/Halim FARAJALLAH.png" alt="Halim FARAJALLAH">
                 <p>
-                    Depuis sa création, A Simple Way Facility management s'est engagée à fournir des services de haute qualité,
-                    en combinant expertise technique et approche personnalisée. Notre objectif est de
-                    devenir le partenaire de confiance de nos clients, en les aidant à gérer leurs installations
-                    et en leur offrant des solutions pour améliorer leur efficacité et réduire leurs coûts. 
+                    Depuis sa création , A Simple Way Facility Management s'est consacrée
+                    à la prestation de services d'excellence, alliant un savoir-faire technique
+                    pointu à une approche individualisée. Notre ambition est de devenir le
+                    partenaire privilégié de nos clients, les accompagnant dans la gestion
+                    de leurs installations tout en proposant des solutions novatrices pour
+                    optimiser leur efficacité opérationnelle et réduire leurs coûts.
                     <br><br>
-                    Notre équipe qualifiée s'engage pleinement à offrir un service client exceptionnel,
-                    en maintenant des normes de qualité rigoureuses. 
+                    Notre équipe hautement qualifiée s'engage pleinement à fournir un service
+                    client exceptionnel, maintenu selon des normes de qualité rigoureuses. Nous
+                    croyons fermement en notre capacité à surpasser les attentes les plus élevées
+                    de nos clients, grâce à notre expérience approfondie et à notre expertise éprouvée.
                     <br><br>
-                    Forts de notre expérience et de notre expertise, nous sommes confiants dans notre
-                    capacité à répondre aux attentes les plus élevées de nos clients.
+                    <b>AU NOM DE TOUTE L'EQUIPE D' A SIMPLE WAY, NOUS NOUS ENGAGEONS A FAIRE DE CHAQUE
+                        INTERACTION AVEC NOS CLIENTS UNE EXPERIENCE EXCEPTIONNELLE.</b>
+
                 </p>
                 <h3>M.Halim FARAJALLAH</h3>
                 <span>Président Directeur Général</span>
