Refactored mission statement in about.html

--- a/about/about.html
+++ b/about/about.html
@@ -216,14 +216,22 @@
         <h2>Notre mission</h2>
         <p class="about">
             <img src="assets/hotelerie.png" alt="room service">
-            Nous intervenons dans des dizaines de milliers d’espaces de travail,
-            de vie et de loisirs. Nous les entretenons, les sécurisons, les rendons
-            plus sains, plus chaleureux et plus fonctionnels pour qu’ils offrent une
-            expérience unique à leurs occupants et leurs utilisateurs et pour en faire
-            des actifs de valeur. <br><br>
-            Permettre aux organisations de se concentrer sur leur cœur d’activités et
-            d’améliorer leurs performances en prenant soin des personnes et de leur
-            environnement est notre raison d’être <br>
+            Nous opérons au sein de milliers d'environnements professionnels,
+            résidentiels et de divertissement, façonnant ces espaces pour les
+            rendre non seulement entretenus et sécurisés, mais aussi plus sains,
+            accueillants et fonctionnels. Notre mission est de transcender la
+            fonctionnalité ordinaire, créant ainsi une expérience singulière pour
+            les occupants et utilisateurs de ces lieux, tout en transformant ces
+            espaces en des atouts de valeur.
+        <br><br>
+            Notre vocation profonde consiste à permettre aux organisations de se
+            focaliser pleinement sur leur cœur d'activités, tout en augmentant leurs
+            performances grâce à notre engagement envers le bien-être des individus et
+            l'amélioration de leur environnement. Ainsi, chaque intervention de notre
+            part vise à harmoniser les relations entre les personnes et leur cadre de
+            vie, faisant de chaque espace que nous touchons un vecteur de réussite et
+            d'épanouissement.
+
         </p>
     </div>
     <div class="barre-de-contact">
